--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import 'tailwindcss';
 
 @theme {
@@ -7,6 +8,7 @@
   --color-secondary: #e2b17d;
 
   --font-boston: 'Boston Angel', 'sans-serif';
+  --font-lato: 'Lato', 'sans-serif';
 }
 
 @font-face {
